simple validation possible with previously entered data
- process_lanes.bpmn

--- a/src/main/resources/static/forms/approveRequest.html
+++ b/src/main/resources/static/forms/approveRequest.html
@@ -1,10 +1,10 @@
-<form name="approveLoan">
+<form name="approveTimeRecord">
   <div class="form-group">
     <label class="control-label">Mitarbeiter</label>
     <input class="form-control"
            cam-variable-type="String"
            cam-variable-name="name"
-           name="customerId"
+           name="employeeID"
            readonly="true" />
   </div>
   <div class="form-group">
@@ -17,8 +17,8 @@
   <div class="control-group">
     <label class="control-label">Zeiterfassung bestätigen</label>
     <div class="controls">
-      <input type="text"
-             cam-variable-name="approved"
+      <input type="checkbox"
+             cam-variable-name="validate"
              cam-variable-type="Boolean"
              required
              class="form-control" />
