Process refinement: - adjusted process model - adjusted html forms to include more detail

--- a/src/main/resources/static/forms/registerResponse.html
+++ b/src/main/resources/static/forms/registerResponse.html
@@ -12,6 +12,9 @@
 
   <div class="control-group">
     <label class="control-label">Offerte angenommen?</label>
+    <div>
+      Erfassen Sie hier ob der Kunde die Offerte angenommen hat.
+    </div>
     <div class="controls">
       <input type="checkbox"
              cam-variable-name="isOfferingAccepted"
