--- a/src/main/resources/static/forms/evaluateDamage.html
+++ b/src/main/resources/static/forms/evaluateDamage.html
@@ -1,22 +1,34 @@
 <strong>Schadenfall des Kunden beurteilen</strong>
 
 <form class="form-horizontal">
-  <label class="control-label">Name des Kunden</label>
-  <div class="controls">
-    <input type="text"
-           cam-variable-name="customerName"
-           cam-variable-type="String"
-           required
-           class="form-control" />
-  </div>
-
-  <div class="control-group">
-    <label class="control-label">Selbstverursacht?</label>
-    <div class="controls">
-      <input type="checkbox"
-             cam-variable-name="isCustomerFault"
-             cam-variable-type="Boolean"
-             class="form-control" />
+    <label class="control-label">Name des Kunden</label>
+    <br>
+    <div>
+        Erfassen Sie hier den Namen des Kunden.
     </div>
-  </div>
+    <br>
+    <div class="controls">
+        <input type="text"
+               cam-variable-name="customerName"
+               cam-variable-type="String"
+               required
+               class="form-control"/>
+    </div>
+
+    <br>
+
+    <div class="control-group">
+        <label class="control-label">Selbstverursacht?</label>
+        <br>
+        <div>
+            Entscheiden Sie ob der Kunde für den Schaden verantwortlich.
+        </div>
+
+        <div class="controls">
+            <input type="checkbox"
+                   cam-variable-name="isCustomerFault"
+                   cam-variable-type="Boolean"
+                   class="form-control"/>
+        </div>
+    </div>
 </form>
